Generation of HTML from template on build using Handlebars and HtmlWebpackPlugin.

--- a/src/index.handlebars
+++ b/src/index.handlebars
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-    <title>Black is Down</title>
-    <meta charset="UTF-8">
+    <title>{{htmlWebpackPlugin.options.title}}</title>
+    <meta charset="UTF-8" />
 </head>
 
 <body>
-    <script src="./app.bundle.js"></script>
+
+
+
+
     <div id="wrapper">
         <h1>Black is Down</h1>
 
