--- a/src/templates/index.handlebars
+++ b/src/templates/index.handlebars
@@ -4,9 +4,12 @@
 <head>
     <title>{{htmlWebpackPlugin.options.title}}</title>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
+    <div id="game-content" class="container">
+    </div>
 </body>
 
 </html>
